Crash when using Ctrl-Z on the Render layer #48604

Closed
opened 2016-06-07 19:18:25 +02:00 by John Shanley · 11 comments

System Information
Operating system and graphics card
Win 10 Home 64bit, 3.4 Ghz Intel I-7 6700, 16 gig RAM, GeForce GTX 745, 4 megs.

Also tested on a Win10 Home 64bit, 3.1 Ghz Intel I-5 4440, 8 gig RAM, no GPU card.

Blender Version
Broken: 2.77a
Worked: N/A

Short description of error
Crash when using CTRL-Z to undo on the layer to be rendered. VesselModel_03.blend

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Go to any layer, other than the one with the Camera.
  2. In Object mode, Hide an object, then use CTRL-Z to Undo. Object reappears as expected.
  3. Go layer 11 (with the ISO camera). Hide an object and press CTRL-Z...crash.

The crash doesn't happen with earlier files of this model (VesselModel_01.blend and VesselModel_02.blend). It appears that something is corrupting this file and it has been passed on to other files that were modified and saved from this one.

**System Information** Operating system and graphics card Win 10 Home 64bit, 3.4 Ghz Intel I-7 6700, 16 gig RAM, GeForce GTX 745, 4 megs. Also tested on a Win10 Home 64bit, 3.1 Ghz Intel I-5 4440, 8 gig RAM, no GPU card. **Blender Version** Broken: 2.77a Worked: N/A **Short description of error** Crash when using CTRL-Z to undo on the layer to be rendered. [VesselModel_03.blend](https://archive.blender.org/developer/F316358/VesselModel_03.blend) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Go to any layer, other than the one with the Camera. 2. In Object mode, Hide an object, then use CTRL-Z to Undo. Object reappears as expected. 3. Go layer 11 (with the ISO camera). Hide an object and press CTRL-Z...crash. The crash doesn't happen with earlier files of this model (VesselModel_01.blend and VesselModel_02.blend). It appears that something is corrupting this file and it has been passed on to other files that were modified and saved from this one.
Author

Changed status to: 'Open'

Changed status to: 'Open'
John Shanley self-assigned this 2016-06-07 19:18:25 +02:00
Author

Added subscriber: @jjfeenix

Added subscriber: @jjfeenix

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue.

Crash seems to happen because a scene's base is freed during cleanup step of undo, while actually being in use by the scene…

Can confirm the issue. Crash seems to happen because a scene's base is freed during cleanup step of undo, while actually being in use by the scene…

Also, 2.77a release crashes, but not 2.76b…

Also, 2.77a release crashes, but not 2.76b…

OK, so this heavily simplified file still crashes on undo… will be much easier to investigate. ;)

VesselModel_03_simplified.blend

OK, so this heavily simplified file still crashes on undo… will be much easier to investigate. ;) [VesselModel_03_simplified.blend](https://archive.blender.org/developer/F316885/VesselModel_03_simplified.blend)
John Shanley was unassigned by Bastien Montagne 2016-06-12 16:57:27 +02:00
Bastien Montagne self-assigned this 2016-06-12 16:57:27 +02:00

Arf, finally found the culprit, was in drawing code actually…

Arf, finally found the culprit, was in drawing code actually…

This issue was referenced by 055001111e

This issue was referenced by 055001111e226e953b18c31deaacc2e1e7394f78

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

So now what? I'm pretty new to Blender and have never turned in a bug before. Is there are fix for what ever ails 2.77a?

Before I saw your Simplified file, by process of elimination, I narrowed it down to the spotlights. I transferred the file to a Win 7 machine with 2.76b installed and was able to move all 4 spotlights to another layer, then remove them one by one- in order (spot, spot001, spot.002, spot.003). If I tried to delete them all or out of order then instant crash.

However this method does not work on Win 10, 2.77a. I can't delete them in any order. I even moved each spotlight to separate layers and tried deleting each one.

Is there any way to delete these spotlights outside of the user interface?

Thanks,
JohnS

So now what? I'm pretty new to Blender and have never turned in a bug before. Is there are fix for what ever ails 2.77a? Before I saw your Simplified file, by process of elimination, I narrowed it down to the spotlights. I transferred the file to a Win 7 machine with 2.76b installed and was able to move all 4 spotlights to another layer, then remove them one by one- in order (spot, spot001, spot.002, spot.003). If I tried to delete them all or out of order then instant crash. However this method does not work on Win 10, 2.77a. I can't delete them in any order. I even moved each spotlight to separate layers and tried deleting each one. Is there any way to delete these spotlights outside of the user interface? Thanks, JohnS

Fix is in master, and will be in next release as well, until then you can use the latest build from our buildbot.

Fix is in master, and will be in next release as well, until then you can use the latest build from [our buildbot](https://builder.blender.org/download).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48604
No description provided.